--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "server": "json-server --watch src/jobs.json --port 5000"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "json-server": "^1.0.0-beta.1",
     "primeicons": "^7.0.0",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
