--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "json-server": "^1.0.0-beta.1",
     "primeicons": "^7.0.0",
     "vue": "^3.4.29",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "vue-spinner": "^1.0.4",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
